# pyxon-ai-entry-task

./: .env.example  .gitignore  README.md  main.py  notes.txt  pyproject.toml  todo.txt
alembic/: env.py
alembic/versions/: 49f989b10b56_create_chunk_and_document_tables.py
data/: pyxon.db
data/tests/: mansaf_recipe.txt  processed-testset.pkl  relevent_doc.json  testset.csv
scripts/: pre-commit.sh
src/: config.py
src/pyxon/: config.py
src/pyxon/parsers/: __init__.py  base.py  docx.py  llama.py  pdf.py  txt.py
src/pyxon/rag/: graph.py  nodes.py  prompts.py  schemas.py  state.py  utils.py
src/pyxon/retrieval/: reranker.py  retriever.py
src/pyxon/storage/: vs.py
src/pyxon/storage/database/: database.py  models.py  repository.py  schemas.py
tests/: dataset_generator.py  rageval.ipynb
