[project]
name = "pyxon-ai-entry-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gipt>=0.1.2",
    "langchain>=1.2.7",
    "pypdf>=6.6.2",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "ruff>=0.14.14",
]
