[project]
name = "pyxon-ai-entry-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.3",
    "faiss-cpu>=1.13.2",
    "gipt>=0.1.2",
    "langchain>=1.2.7",
    "langchain-experimental>=0.4.1",
    "langchain-pinecone",
    "langgraph>=1.0.7",
    "llama-cloud>=1.2.0",
    "pypdf>=6.6.2",
    "python-docx>=1.2.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.2",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.53.1",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "ruff>=0.14.14",
    "sqlite-web>=0.7.0",
]
